--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -4,5 +4,9 @@
   "main": "src/index.js",
   "author": "Christofer Olaison",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@company/theme": "0.1.0",
+    "react-native": "0.57.4"
+  }
 }
