--- a/applications/expo-app/package.json
+++ b/applications/expo-app/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "my-new-project",
+  "name": "expo-app",
+  "version": "0.1.0",
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
