--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   "author": "Christofer Olaison <christofer.olaison@mentimeter.com>",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "clean": "rm -rf node_modules && rm -rf applications/expo-app/node_modules",
+    "clean:install": "yarn clean && yarn"
+  },
   "workspaces": ["packages/*", "applications/*"]
 }
