--- a/applications/expo-app/package.json
+++ b/applications/expo-app/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "@company/primitives": "0.1.0",
     "expo": "^31.0.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
+    "get-yarn-workspaces": "1.0.2",
     "jest-expo": "^31.0.0"
   },
   "workspaces": {
