--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "dependencies": {
     "@company/theme": "0.1.0",
+    "react": "16.5.0",
     "react-native": "0.57.1"
   }
 }
