--- a/applications/expo-app/package.json
+++ b/applications/expo-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expo-app",
   "version": "0.1.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "/AppEntry.js",
   "private": true,
   "scripts": {
     "start": "expo start",
